aligned text to center and fixed margins

--- a/css/about.css
+++ b/css/about.css
@@ -198,3 +198,35 @@ nav ul {
 nav a {
   margin-right: -72px;
 }
+
+.education {
+  display: grid;
+  grid-gap: 1em;
+  grid-template-columns: 84%;
+  grid-template-rows: 24% 24%;
+  justify-content: center;
+  margin-top: 1.5rem;
+  margin-bottom: 4rem;
+}
+
+.education img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-position: 40% 32%;
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.education div {
+  text-align: center;
+}
+
+.education p {
+  width: 100%;
+}
+
+.education h2 {
+  margin-top: 0;
+}
+}
